# fair-predicates

./: .gitignore  README  bintree.lhs  example.hs  fair-predicates.cabal  index.html  index.lhs  index.markdown
Data/: Answer.hs
